<resources>
    <string name="empty"></string>
    <string name="app_name">CleanArchitecture</string>

    <string name="movies_screen_title">Movies</string>
    <string name="movie_details_screen_title">Movie Details</string>
    <string name="movie_details_summary">Summary</string>
    <string name="movie_genres">Genres</string>
    <string name="movie_details_movie_name">Name</string>
    <string name="movie_details_cast">Cast</string>
    <string name="movie_details_release_date">Release Date</string>
    <string name="movie_details_vote">Movie Vote</string>

    <!--Sort Values-->
    <string name="popular_value">popular</string>
    <string name="top_rated_value">top_rated</string>
    <string name="now_playing_value">now_playing</string>
    <string name="upcoming_value">upcoming</string>

    <!--Sort Label-->
    <string name="popular_label">Popular</string>
    <string name="top_rated_label">Top Rated</string>
    <string name="now_playing_label">Now Playing</string>
    <string name="upcoming_label">Upcoming</string>
</resources>