<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="mohsen.soltanian.cleanarchitecture.ui.fragments.details.MovieDetailsViewModel" />

        <variable
            name="click"
            type="mohsen.soltanian.cleanarchitecture.ui.fragments.details.MovieDetailsFragment.ClickProxy" />

        <variable
            name="detailsModel"
            type="mohsen.soltanian.cleanarchitecture.core.data.models.response.Movie" />

        <variable
            name="castsModel"
            type="mohsen.soltanian.cleanarchitecture.core.data.models.response.Cast" />

        <variable
            name="castAdapter"
            type="mohsen.soltanian.cleanarchitecture.ui.fragments.details.adapter.CastsAdapter" />

        <variable
            name="rvLayoutManager"
            type="androidx.recyclerview.widget.LinearLayoutManager" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/translucentBackground">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="@dimen/activity_horizontal_margin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/moviePoster"
                    style="@style/MoviePoster"
                    android:layout_height="240dp"
                    android:layout_centerHorizontal="true"
                    android:fitsSystemWindows="true"
                    android:visibility="visible"
                    app:imageUrl="@{`https://image.tmdb.org/t/p/w500`+ detailsModel.movieBackdrop}"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/movieDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layoutDirection="ltr"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:visibility="visible">

                <TextView
                    style="@style/MovieDetailsTitle"
                    android:text="@string/movie_details_summary" />

                <TextView
                    android:id="@+id/movieSummary"
                    style="@style/MovieDetailsText"
                    android:text="@{detailsModel.movieDescription}" />

                <TextView
                    style="@style/MovieDetailsTitle"
                    android:text="@string/movie_details_movie_name" />

                <TextView
                    android:id="@+id/movieName"
                    style="@style/MovieDetailsText"
                    android:text="@{detailsModel.movieTitle}" />


                <LinearLayout
                    android:id="@+id/lGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layoutDirection="ltr"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MovieDetailsTitle"
                        android:text="@string/movie_genres" />

                    <TextView
                        android:id="@+id/genres"
                        style="@style/MovieGenresText"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginLeft="@dimen/_16sdp"
                        tools:text="Drama" />

                </LinearLayout>

                <TextView
                    style="@style/MovieDetailsTitle"
                    android:text="@string/movie_details_release_date"
                    android:layout_marginTop="@dimen/_16sdp"/>

                <TextView
                    android:id="@+id/releaseDateOfMovie"
                    style="@style/MovieDetailsText"
                    android:text="@{detailsModel.movieReleaseDate}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginRight="5dp"
                    android:layoutDirection="ltr"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MovieDetailsTitle"
                        android:text="@string/movie_details_cast" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvListOfCast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:adapter="@{castAdapter}"
                        app:data="@{viewModel.list}"
                        app:layoutManager="@{rvLayoutManager}"
                        tools:itemCount="1"
                        tools:listitem="@layout/cast_item"
                        tools:orientation="horizontal" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.andremion.counterfab.CounterFab
            android:id="@+id/counter_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> click.fabClicked()}"
            android:src="@drawable/ic_baseline_star_24"
            app:backgroundTint="@color/teal_700"
            app:badgeBackgroundColor="#fff"
            app:badgePosition="RightTop"
            app:badgeTextColor="#282828"
            app:elevation="@dimen/_6sdp"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|right" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
